# pico-10dof

./: CMakeLists.txt  README.md
10dof/: 10dof.c  CMakeLists.txt  bmp280.c  bmp280.h  mpu6050.c  mpu6050.h  qmc5883l.c  qmc5883l.h
